Расширена сборка Мавеном. Разбито на модули.